# hcs-class

./: .gitignore  README.md  flake.nix  hcs-class.cabal  hie.yaml
app/: Main.hs
src/: Lib.hs
